--- a/BookmarkerJsVanilla/index.html
+++ b/BookmarkerJsVanilla/index.html
@@ -42,7 +42,7 @@
 
     </div>
     <footer class="footer">
-        <p>&copy; 2016 Bookmarker, inc.</p>
+        <p> @ 2018 Bookmarker, inc.</p>
     </footer >
 
 </div>
